--- a/Genetic Sample Acquaintance.ipynb
+++ b/Genetic Sample Acquaintance.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,13 +50,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class rectangle:\n",
     "    def __init__(self, x, y, w, h, theta):\n",
-    "        thresh = 8\n",
+    "        thresh = 10\n",
     "        self.x = x\n",
     "        self.y = y\n",
     "        self.w = w\n",
@@ -82,7 +82,7 @@
     "        y3r = centery + (self.y3 - centery)*c + (self.x3 - centerx)*s\n",
     "        self.pts = np.array([[x0r,y0r],[x1r,y1r],[x2r,y2r],[x3r,y3r]], np.int32)\n",
     "        \n",
-    "        # Outer threshold rectangle\n",
+    "        # Внешний четырехугольник\n",
     "\n",
     "        out_x0 = self.x - thresh \n",
     "        out_y0 = self.y - thresh\n",
@@ -103,7 +103,7 @@
     "        y3r = centery + (out_y3 - centery)*c + (out_x3 - centerx)*s\n",
     "        self.pts_outer = np.array([[x0r,y0r],[x1r,y1r],[x2r,y2r],[x3r,y3r]], np.int32)\n",
     "\n",
-    "        # Inner threshold rectangle\n",
+    "        # Внутренний четырехугольник\n",
     "\n",
     "        int_x0 = self.x + thresh\n",
     "        int_y0 = self.y + thresh\n",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,9 +152,7 @@
     "        self.num_whites_total = self.image[self.image==(255,255,255)].size\n",
     "        print(self.num_whites_total)\n",
     "        \n",
-    "        \n",
     "    def init_popultation(self, size):\n",
-    "        #self.population=[]\n",
     "        self.size = size\n",
     "        for _ in range(self.size):\n",
     "            rand_x = np.random.randint(0, self.img_dims[0]-10,1)\n",
@@ -169,30 +167,7 @@
     "        b = point_2[1]-k*point_2[0]\n",
     "        return k, b\n",
     "    \n",
-    "    \n",
-    "        \n",
-    "    \n",
     "    def find_pxls_thresh(self):\n",
-    "        '''\n",
-    "        # Pixels in side's sectors\n",
-    "        for i in range(self.size):\n",
-    "            sides = []\n",
-    "            self.whites_per_side = []\n",
-    "            mask_img = np.zeros(self.image.shape[:2], np.uint8)\n",
-    "            for j in range(0,4):\n",
-    "                sides.append(np.concatenate((self.population[i].pts_outer[j-1],self.population[i].pts_outer[j],\\\n",
-    "                self.population[i].pts_inner[j],self.population[i].pts_inner[j-1])).reshape(4,2))\n",
-    "                \n",
-    "                cv2.fillPoly(mask_img, pts = [sides[j]], color=(255,255,255))\n",
-    "                masked = cv2.bitwise_and(self.image, self.image, mask=mask_img)\n",
-    "                #cv2.imshow('sesss', masked)\n",
-    "                #cv2.waitKey()\n",
-    "                #cv2.destroyAllWindows()\n",
-    "                self.whites_per_side.append(masked[masked==(255,255,255)].size) \n",
-    "            self.population[i].num_whites = sum(self.whites_per_side)\n",
-    "            #print(self.whites_per_side)\n",
-    "            \n",
-    "        '''\n",
     "        for i in range(self.size):\n",
     "            mask_img = np.zeros(self.image.shape[:2], np.uint8)\n",
     "            #print(self.population[i].pts_outer)\n",
@@ -210,41 +185,15 @@
     "    def calc_fitness(self):\n",
     "        self.fitness =[]\n",
     "        weighted_sides = []\n",
-    "        for i in range(self.size):\n",
-    "            # Total pts - bad\n",
-    "            #self.fitness.append(self.population[i].num_whites) \n",
-    "            \n",
-    "            # Pts/Area - bad\n",
-    "            #self.fitness.append(self.population[i].num_whites/(self.population[i].S_thresh+1))\n",
-    "            \n",
-    "            # Pts/(Total Pts-Pts)\n",
+    "        for i in range(self.size):  \n",
     "            self.fitness.append( 100*(self.population[i].num_whites/(self.num_whites_total-self.population[i].num_whites+1)))\n",
-    "            \n",
-    "            # Weighted Pts/(Total Pts-Pts)\n",
-    "            # Weight of n-th element is N of pts - average \n",
-    "            # Weight of all 1 /  (1+sum(W*Pts[i]/(Total_Pts-Pts)))\n",
-    "            '''\n",
-    "            average = self.population[i].num_whites/4\n",
-    "            for j in range(4):\n",
-    "                weight = self.whites_per_side[j]-average\n",
-    "                weighted_sides.append(weight*self.whites_per_side[j])\n",
-    "                \n",
-    "            weight_total = abs(1/(sum(weighted_sides)/(self.num_whites_total-self.population[i].num_whites+1)+1))\n",
-    "            #print(weight_total)\n",
-    "            self.fitness.append( weight_total+(self.population[i].num_whites/(self.num_whites_total-self.population[i].num_whites+1)))\n",
-    "            '''\n",
-    "        #print(self.fitness)\n",
     "        x = zip(self.fitness,self.population)\n",
     "        xs = sorted(x,reverse = True, key=lambda tup: tup[0])\n",
     "        self.fitness = [x[0] for x in xs]\n",
     "        self.population = [x[1] for x in xs]\n",
-    "        \n",
-    "        #self.fit_array = np.array(self.fitness)\n",
-    "    \n",
     "    \n",
     "    def selection(self):\n",
     "        self.population = self.population[:int(len(self.population)/2)]\n",
-    "        #print(len(self.population))\n",
     "        \n",
     "    def crossover(self, r1, r2):\n",
     "        a = np.random.random(1)\n",
@@ -255,7 +204,6 @@
     "        h_new_1 = a * r1.h + b * r2.h\n",
     "        theta_new_1 = a * r1.theta + b * r2.theta\n",
     "        self.rect_new_1 = rectangle(x_new_1,y_new_1,w_new_1,h_new_1,theta_new_1)\n",
-    "        \n",
     "        a = 1 - a\n",
     "        b = 1 - b\n",
     "        x_new_2 = a * r1.x + b * r2.x\n",
@@ -264,7 +212,6 @@
     "        h_new_2 = a * r1.h + b * r2.h\n",
     "        theta_new_2 = a * r1.theta + b * r2.theta\n",
     "        self.rect_new_2 = rectangle(x_new_2,y_new_2,w_new_2,h_new_2,theta_new_2)\n",
-    "        \n",
     "        return self.rect_new_1, self.rect_new_2\n",
     "        \n",
     "    def repopulate(self):\n",
@@ -274,10 +221,7 @@
     "            index_2 = np.random.randint(index_1,len(self.population)-1,1)\n",
     "            child_1, child_2 = self.crossover(self.population[index_1[0]],self.population[index_2[0]]) \n",
     "            self.offspring.append(child_1)\n",
-    "            #self.offspring.append(child_2)\n",
     "        self.population = self.population + self.offspring\n",
-    "        \n",
-    "        #print(len(self.population))\n",
     "        \n",
     "    def mutate(self, rect):\n",
     "        rect.x += int(10*(1-2*np.random.random(1)[0]))\n",
@@ -285,14 +229,6 @@
     "        rect.w += int(10*(1-2*np.random.random(1)[0]))\n",
     "        rect.h += int(10*(1-2*np.random.random(1)[0]))\n",
     "        rect.theta += 10*(1-2*np.random.random(1)[0])\n",
-    "        #print(rect.x, 'here1')\n",
-    "        \n",
-    "        #rect.x = int(np.maximum(0, np.minimum(self.img_dims[0], rect.x)))\n",
-    "        ##print(rect.x, 'here2')\n",
-    "        #rect.y = int(np.maximum(0, np.minimum(self.img_dims[1], rect.y)))\n",
-    "        #rect.w = int(np.maximum(0, np.minimum(50, rect.x)))\n",
-    "        #rect.h = int(np.maximum(0, np.minimum(50, rect.x)))\n",
-    "        #rect.theta = np.maximum(0, np.minimum(2*np.pi, rect.x))\n",
     "        return rect\n",
     "    \n",
     "    def mutate_population(self):\n",
@@ -309,31 +245,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10773\n",
-      "Found better fintess:  13.172268907563026\n",
-      "Found better fintess:  18.47371893556191\n",
-      "Found better fintess:  19.85760373790188\n",
-      "Found better fintess:  20.74414434607195\n",
-      "Found better fintess:  23.18774296821404\n",
-      "Found better fintess:  23.82484771865303\n",
-      "Found better fintess:  24.253257986391418\n",
-      "Found better fintess:  26.08543007606788\n",
-      "Found better fintess:  35.761088709677416\n",
-      "Best fintess:  35.761088709677416\n"
+      "4296\n",
+      "Found better fintess:  20.736161843214386\n",
+      "Found better fintess:  23.229136793805562\n",
+      "Found better fintess:  24.949113114277406\n",
+      "Found better fintess:  42.615333554596745\n",
+      "Found better fintess:  87.88806296458243\n",
+      "Found better fintess:  90.63886424134871\n",
+      "Found better fintess:  125.09167103195391\n",
+      "Found better fintess:  201.96767392832044\n",
+      "Best fintess:  201.96767392832044\n"
      ]
     }
    ],
    "source": [
     "#np.random.seed(14)\n",
-    "file = cv2.imread('Test/door6.jpg')\n",
-    "scale_percent = 100 # percent of original size\n",
+    "file = cv2.imread('Test/box1.jpg')\n",
+    "scale_percent = 50 \n",
     "width = int(file.shape[1] * scale_percent / 100)\n",
     "height = int(file.shape[0] * scale_percent / 100)\n",
     "dim = (width, height)\n",
@@ -343,7 +278,6 @@
     "population_len =20 \n",
     "algorithm = GA(edges_cpy)\n",
     "number_steps =300\n",
-    "#rect = rectangle(200, 200,100,100,np.pi/2)\n",
     "algorithm.init_popultation(population_len )\n",
     "best_fit = 0\n",
     "best_model = None\n",
@@ -361,22 +295,15 @@
     "        best_fit = algorithm.fitness[0]\n",
     "        print('Found better fintess: ',best_fit )\n",
     "        best_model = algorithm.population[0]\n",
-    "        #print('Found better modЦel: ',best_model.pts )\n",
     "    algorithm.selection()\n",
     "    algorithm.repopulate()\n",
     "    algorithm.mutate_population()\n",
-    "    #print(algorithm.fitness)\n",
     "    cv2.imshow('edges', edges_cpy)\n",
     "    if cv2.waitKey(27) & 0xFF == ord('q'):\n",
     "        break\n",
     "cv2.destroyAllWindows()\n",
     "edges_cpy = edges.copy()\n",
-    "\n",
-    "#algorithm.find_pxls_thresh()\n",
-    "#algorithm.calc_fitness()\n",
-    "#print(algorithm.population[0].num_whites)\n",
     "print('Best fintess: ',best_fit )\n",
-    "#print('Best model: ',best_model.pts )\n",
     "cv2.polylines(edges_cpy,[best_model.pts],True,(0,255,255))\n",
     "cv2.polylines(edges_cpy,[best_model.pts_outer],True,(0,0,255))\n",
     "cv2.polylines(edges_cpy,[best_model.pts_inner],True,(0,0,255))\n",
@@ -389,11 +316,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = cv2.imread('Test/box1.jpg')\n",
+    "file = cv2.imread('Test/door2.jpg')\n",
     "scale_percent = 50 # percent of original size\n",
     "width = int(file.shape[1] * scale_percent / 100)\n",
     "height = int(file.shape[0] * scale_percent / 100)\n",
@@ -403,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -476,10 +403,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "file = cv2.imread('Test/box9.jpg')\n",
+    "scale_percent = 100 # percent of original size\n",
+    "width = int(file.shape[1] * scale_percent / 100)\n",
+    "height = int(file.shape[0] * scale_percent / 100)\n",
+    "dim = (width, height)\n",
+    "resized = cv2.resize(file, dim)\n",
+    "edges = filter_image(resized)"
+   ]
   },
   {
    "cell_type": "code",
