--- a/Genetic algorithm sample test.ipynb
+++ b/Genetic algorithm sample test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -120,12 +120,12 @@
      "output_type": "stream",
      "text": [
       "Initial population \n",
-      "  [[15 21 17  2]\n",
-      " [28  0 10 26]\n",
-      " [ 6  0  9 13]\n",
-      " [21 18 27 23]\n",
-      " [ 2  4 15 14]\n",
-      " [ 9  3 11  8]]\n",
+      "  [[23 22 18 13]\n",
+      " [ 6 22 12 29]\n",
+      " [ 3  1  7 29]\n",
+      " [ 9  2 15 13]\n",
+      " [17  5 17 28]\n",
+      " [ 1  6 10  0]]\n",
       "Cumsum 7\n",
       "Random 6\n",
       "Cumsum 7\n",
@@ -166,7 +166,19 @@
       "Random 6\n",
       "Cumsum 7\n",
       "Random 6\n",
-      "found at  19 [[9. 3. 3. 3.]]\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "Cumsum 7\n",
+      "Random 6\n",
+      "found at  25 [[10.  8.  4.  0.]]\n",
       "eval =  [[30.]]\n"
      ]
     }
