rewritten GA, todo: fix bug with indices

--- a/Genetic algorithm sample test.ipynb
+++ b/Genetic algorithm sample test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,9 +49,9 @@
     "    #print('Probabilities', P)\n",
     "    C = np.cumsum(P)\n",
     "    C = np.insert(C, 0, 0).reshape(P.shape[0]+1,1)\n",
-    "    print('Cumsum' , C.size)\n",
+    "    #print('Cumsum' , C.size)\n",
     "    R = np.random.random(P.shape)\n",
-    "    print('Random', R.size)\n",
+    "    #print('Random', R.size)\n",
     "    sorted_population = np.zeros([population.shape[0],4])\n",
     "    for i in range(R.shape[0]):\n",
     "        for j in range(0, C.shape[0]):\n",
@@ -60,6 +60,7 @@
     "                sorted_population[i] = population[j]\n",
     "                #print(f'Gene {j} is now at {i}' )\n",
     "                break\n",
+    "    #print()\n",
     "    R_crossover = np.random.random(P.shape)\n",
     "    parents_indices = []\n",
     "    #print ('Crossover chance', R_crossover)\n",
@@ -69,6 +70,7 @@
     "    #print('Sorted ',sorted_population)\n",
     "    #print('parents ', parents_indices)\n",
     "    R_exchange_pos = np.random.randint(0,4,[len(parents_indices),1])\n",
+    "    #Crossover\n",
     "    if len(parents_indices) == 0:\n",
     "        pass\n",
     "        #print('no parents selected')\n",
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,96 +105,61 @@
     "    #print(R_mutate_indices)\n",
     "    #R_mutate_indices = np.random.randint(0,population.size,[mutation_chance,1])\n",
     "    #R_mutate_val = np.random.randint(0,30,[mutation_chance,1])\n",
+    "    print(population)\n",
+    "    print(R_mutate_indices)\n",
     "    for i in R_mutate_indices:\n",
+    "        print(i)\n",
+    "        print(population[int(i/4)], int(i/4))\n",
     "        population[int(i/4)][i%4] = np.random.randint(0,30,1)\n",
-    "        #print(population[int(i/4)][i%4])\n",
+    "        \n",
     "    #print(population)\n",
     "    return population"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial population \n",
-      "  [[23 22 18 13]\n",
-      " [ 6 22 12 29]\n",
-      " [ 3  1  7 29]\n",
-      " [ 9  2 15 13]\n",
-      " [17  5 17 28]\n",
-      " [ 1  6 10  0]]\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "Cumsum 7\n",
-      "Random 6\n",
-      "found at  25 [[10.  8.  4.  0.]]\n",
-      "eval =  [[30.]]\n"
+      "[[ 7. 23. 14.  7.]\n",
+      " [17. 20. 23. 20.]\n",
+      " [17. 20. 23. 20.]\n",
+      " [ 7. 23. 14.  7.]\n",
+      " [22. 13. 25. 27.]]\n",
+      "[ 0 15  4  5 11  9 13  8]\n",
+      "0\n",
+      "[ 7. 23. 14.  7.] 0\n",
+      "15\n",
+      "[ 7. 23. 14.  7.] 3\n",
+      "4\n",
+      "[17. 20. 23. 20.] 1\n",
+      "5\n",
+      "[17. 20. 23. 20.] 1\n",
+      "11\n",
+      "[17. 20. 23. 20.] 2\n",
+      "9\n",
+      "[17. 20. 23. 28.] 2\n",
+      "13\n",
+      "[ 7. 23. 14. 23.] 3\n",
+      "8\n",
+      "[17.  5. 23. 28.] 2\n"
      ]
     }
    ],
    "source": [
     "#np.random.seed(2)\n",
-    "genes = init_genes(6)\n",
-    "print('Initial population \\n ', genes)\n",
-    "for _ in range(200):\n",
+    "genes = init_genes(5)\n",
+    "#print('Initial population \\n ', genes)\n",
+    "for _ in range(1):\n",
     "    evaluate = calc_model(genes)\n",
     "    #print('Evaluate', evaluate)\n",
     "    P = selection(genes, evaluate, 0.25)\n",
     "    #print('Population',P)\n",
-    "    genes = mutation(P, 0.1)\n",
+    "    genes = mutation(P, 0.4)\n",
     "    if 30 in evaluate:\n",
     "        print('found at ', _ , genes[np.where(evaluate[:]==30)[0]])\n",
     "        print('eval = ', evaluate[np.where(evaluate[:]==30)[0]])\n",
@@ -201,10 +168,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(2/4)"
+   ]
   },
   {
    "cell_type": "code",
