--- a/science/open3d_visualization_test.ipynb
+++ b/science/open3d_visualization_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -285,30 +285,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found better fintess:  13.789107763615297 at 0\n",
-      "Found better fintess:  34.33652530779754 at 2\n",
-      "Found better fintess:  36.1997226074896 at 6\n",
-      "Found better fintess:  39.88603988603989 at 7\n",
-      "Found better fintess:  47.44744744744745 at 8\n",
-      "Found better fintess:  57.62439807383628 at 10\n",
-      "Found better fintess:  60.720130932896886 at 12\n",
-      "Found better fintess:  62.04620462046204 at 13\n",
-      "Found better fintess:  68.15068493150685 at 15\n",
-      "Found better fintess:  77.57685352622062 at 17\n",
-      "Found better fintess:  79.85347985347985 at 18\n",
-      "Found better fintess:  81.85185185185185 at 20\n",
-      "Found better fintess:  86.69201520912547 at 21\n",
-      "Found better fintess:  89.57528957528957 at 22\n",
-      "Found better fintess:  91.05058365758755 at 24\n",
-      "Found better fintess:  93.68836291913215 at 25\n",
-      "Found better fintess:  96.79358717434869 at 26\n",
-      "Found better fintess:  98.38383838383838 at 27\n",
-      "Found better fintess:  99.59349593495935 at 28\n",
-      "Found better fintess:  100.40816326530613 at 29\n",
-      "Found better fintess:  107.17299578059072 at 30\n",
-      "Found better fintess:  109.82905982905984 at 31\n",
-      "Found better fintess:  111.63793103448276 at 34\n",
-      "Found better fintess:  113.47826086956523 at 35\n"
+      "Found better fintess:  18.170878459687124 at 0\n",
+      "Found better fintess:  48.56278366111952 at 3\n"
      ]
     }
    ],
@@ -363,8 +341,8 @@
     "    #vis.run()\n",
     "    \n",
     "    vis.add_geometry(pcd)\n",
-    "    vis.add_geometry(best_model.line_set)\n",
-    "    vis.add_geometry(best_model.line_set1)\n",
+    "    #vis.add_geometry(best_model.line_set)\n",
+    "    #vis.add_geometry(best_model.line_set1)\n",
     "    vis.run()\n",
     "    vis.destroy_window()"
    ]
