--- a/science/open3d_visualization_test.ipynb
+++ b/science/open3d_visualization_test.ipynb
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,22 @@
     "    hull_ls = o3d.geometry.LineSet.create_from_triangle_mesh(hull)\n",
     "    color = np.random.rand(3).tolist()\n",
     "    hull_ls.paint_uniform_color(color)\n",
-    "    return hull_ls"
+    "    return hull_ls\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def color_pts(points):\n",
+    "    inliers_pcd = o3d.geometry.PointCloud()\n",
+    "    inliers_pcd.points = o3d.utility.Vector3dVector(points)\n",
+    "    color = np.random.rand(3)\n",
+    "    point_colors = np.tile(color, (points.shape[0],1))\n",
+    "    inliers_pcd.colors = o3d.utility.Vector3dVector(point_colors)\n",
+    "    return inliers_pcd"
    ]
   },
   {
@@ -429,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,20 +606,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pcd = o3d.io.read_point_cloud(\"D:/Open3D/Open3D-master/examples/test_data/fragment.ply\") \n",
-    "vis = o3d.visualization.Visualizer()\n",
-    "vis.create_window(width = 800, height = 600)\n",
-    "vis.add_geometry(pcd)\n",
-    "vis.run()\n",
-    "vis.destroy_window()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -613,24 +614,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PointCloud with 981 points.\n",
-      "Found better fintess:  0.11350737797956867 at 0\n",
-      "Found better fintess:  0.12758620689655173 at 5\n",
-      "Found better fintess:  0.6081967213114754 at 6\n",
-      "PointCloud with 613 points.\n"
+      "PointCloud with 196133 points.\n",
+      "Found better fintess:  0.11817222998204156 at 0\n",
+      "Found better fintess:  0.17623811065932615 at 2\n",
+      "Found better fintess:  0.37583125227980585 at 4\n",
+      "Found better fintess:  0.4725694679069907 at 27\n",
+      "Found better fintess:  0.4783968763662129 at 58\n",
+      "PointCloud with 132669 points.\n",
+      "Found better fintess:  0.12406588378831783 at 0\n",
+      "Found better fintess:  0.3085018246375382 at 1\n",
+      "Found better fintess:  0.3747228151617516 at 3\n",
+      "Found better fintess:  0.6094551806965826 at 8\n",
+      "PointCloud with 82434 points.\n",
+      "Found better fintess:  0.1590832395950506 at 0\n",
+      "Found better fintess:  0.555534588821376 at 1\n",
+      "Found better fintess:  0.5658467090891822 at 69\n",
+      "Found better fintess:  0.5688267199543249 at 77\n",
+      "PointCloud with 52548 points.\n",
+      "Found better fintess:  0.18964931742546015 at 0\n",
+      "Found better fintess:  0.51417704011065 at 2\n",
+      "PointCloud with 34707 points.\n",
+      "Found better fintess:  0.24661470493157572 at 0\n",
+      "Found better fintess:  0.3081184984170059 at 3\n",
+      "Found better fintess:  0.5667659804983749 at 4\n"
      ]
     }
    ],
    "source": [
-    "pcd = o3d.io.read_point_cloud(\"models/cube_test1.ply\")\n",
-    "#pcd = o3d.io.read_point_cloud(\"D:/Open3D/Open3D-master/examples/test_data/fragment.ply\") \n",
+    "#pcd = o3d.io.read_point_cloud(\"models/cube_test1.ply\")\n",
+    "pcd = o3d.io.read_point_cloud(\"C:/Open3D-master/examples/test_data/fragment.ply\") \n",
+    "\n",
     "vis = o3d.visualization.Visualizer()\n",
     "vis.create_window(width = 800, height = 600)\n",
     "vis.add_geometry(pcd)\n",
@@ -638,14 +658,16 @@
     "print(pcd)\n",
     "models_list = []\n",
     "inliers_list = []\n",
-    "for i in range(1):\n",
-    "    model, inliers, inliers_indices = find_plane(pcd,50,0.1)\n",
+    "for i in range(5):\n",
+    "    model, inliers, inliers_indices = find_plane(pcd,80,0.08)\n",
     "    if inliers.shape[0]>15:\n",
     "        models_list.append(model)\n",
     "        inliers_list.append(inliers)\n",
     "        #print(inliers)\n",
-    "        hull = find_hull(inliers)  \n",
-    "        vis.add_geometry(hull)\n",
+    "        #hull = find_hull(inliers)  \n",
+    "        pts = color_pts(inliers)\n",
+    "        vis.add_geometry(pts)\n",
+    "        #print(np.asarray(pcd.colors))\n",
     "        #print(type(pcd.points))\n",
     "        #pcd1 = np.delete(pcd, [indexA,indexB],0) \n",
     "        #print(pcd1.shape)\n",
@@ -654,6 +676,20 @@
     "        print(pcd)\n",
     "vis.run()\n",
     "vis.destroy_window()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pcd = o3d.io.read_point_cloud(\"C:/Open3D-master/examples/test_data/fragment.ply\") \n",
+    "vis1 = o3d.visualization.Visualizer()\n",
+    "vis1.create_window(width = 800, height = 600)\n",
+    "vis1.add_geometry(pcd)\n",
+    "vis1.run()\n",
+    "vis1.destroy_window()"
    ]
   },
   {
@@ -740,7 +776,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
