--- a/science/open3d_visualization_test.ipynb
+++ b/science/open3d_visualization_test.ipynb
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,6 +430,7 @@
     "    inliers_pcd = o3d.geometry.PointCloud()\n",
     "    inliers_pcd.points = o3d.utility.Vector3dVector(points)\n",
     "    color = np.random.rand(3)\n",
+    "    #color = np.array([0,0,0])\n",
     "    point_colors = np.tile(color, (points.shape[0],1))\n",
     "    inliers_pcd.colors = o3d.utility.Vector3dVector(point_colors)\n",
     "    return inliers_pcd"
@@ -444,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,42 +615,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PointCloud with 196133 points.\n",
-      "Found better fintess:  0.11817222998204156 at 0\n",
-      "Found better fintess:  0.17623811065932615 at 2\n",
-      "Found better fintess:  0.37583125227980585 at 4\n",
-      "Found better fintess:  0.4725694679069907 at 27\n",
-      "Found better fintess:  0.4783968763662129 at 58\n",
-      "PointCloud with 132669 points.\n",
-      "Found better fintess:  0.12406588378831783 at 0\n",
-      "Found better fintess:  0.3085018246375382 at 1\n",
-      "Found better fintess:  0.3747228151617516 at 3\n",
-      "Found better fintess:  0.6094551806965826 at 8\n",
-      "PointCloud with 82434 points.\n",
-      "Found better fintess:  0.1590832395950506 at 0\n",
-      "Found better fintess:  0.555534588821376 at 1\n",
-      "Found better fintess:  0.5658467090891822 at 69\n",
-      "Found better fintess:  0.5688267199543249 at 77\n",
-      "PointCloud with 52548 points.\n",
-      "Found better fintess:  0.18964931742546015 at 0\n",
-      "Found better fintess:  0.51417704011065 at 2\n",
-      "PointCloud with 34707 points.\n",
-      "Found better fintess:  0.24661470493157572 at 0\n",
-      "Found better fintess:  0.3081184984170059 at 3\n",
-      "Found better fintess:  0.5667659804983749 at 4\n"
+      "PointCloud with 22174 points.\n",
+      "Found better fintess:  0.051498482549317146 at 0\n",
+      "Found better fintess:  0.07687824777815551 at 1\n",
+      "Found better fintess:  0.09761409761409762 at 2\n",
+      "Found better fintess:  0.14116617775719212 at 3\n",
+      "Found better fintess:  0.14198897872997887 at 6\n",
+      "Found better fintess:  0.15453504113297928 at 16\n",
+      "Found better fintess:  0.26060261512222854 at 20\n",
+      "PointCloud with 17593 points.\n",
+      "Found better fintess:  0.0683143065338839 at 0\n",
+      "Found better fintess:  0.06909333981526494 at 1\n",
+      "Found better fintess:  0.198433242506812 at 2\n",
+      "Found better fintess:  0.27949090909090907 at 5\n",
+      "Found better fintess:  0.3917411597183767 at 53\n",
+      "PointCloud with 12644 points.\n",
+      "Found better fintess:  0.13500897666068223 at 0\n",
+      "Found better fintess:  0.16545303714628076 at 7\n",
+      "Found better fintess:  0.16771333579608422 at 8\n",
+      "Found better fintess:  0.214018242918867 at 13\n",
+      "Found better fintess:  0.31886930218003545 at 74\n",
+      "Found better fintess:  0.3406849750821758 at 93\n",
+      "PointCloud with 9434 points.\n",
+      "Found better fintess:  0.09825378346915017 at 0\n",
+      "Found better fintess:  0.1379975874547648 at 1\n",
+      "Found better fintess:  0.690378068446515 at 3\n",
+      "Found better fintess:  0.6976786035630737 at 13\n",
+      "Found better fintess:  0.7140261627906976 at 59\n",
+      "Found better fintess:  0.7168334849863512 at 61\n",
+      "PointCloud with 5498 points.\n",
+      "Found better fintess:  0.11408308004052685 at 0\n",
+      "Found better fintess:  0.2399639152007217 at 3\n",
+      "Found better fintess:  0.25553779401689886 at 6\n",
+      "Found better fintess:  0.5133498486099642 at 29\n",
+      "Found better fintess:  0.5982558139534884 at 51\n",
+      "PointCloud with 3443 points.\n",
+      "Found better fintess:  0.3571147024044147 at 0\n",
+      "Found better fintess:  0.5107503290917069 at 3\n",
+      "Found better fintess:  0.7557368689444162 at 10\n",
+      "Found better fintess:  0.7665469471523858 at 23\n",
+      "Found better fintess:  0.7756575554409489 at 81\n",
+      "PointCloud with 1942 points.\n",
+      "Found better fintess:  0.28779840848806365 at 0\n",
+      "Found better fintess:  0.33013698630136984 at 5\n",
+      "Found better fintess:  0.36185133239831696 at 7\n",
+      "Found better fintess:  0.5183737294761532 at 45\n",
+      "PointCloud with 1282 points.\n",
+      "Found better fintess:  0.2975708502024291 at 0\n",
+      "Found better fintess:  0.42761692650334077 at 7\n",
+      "Found better fintess:  0.43080357142857145 at 11\n",
+      "Found better fintess:  0.5866336633663366 at 25\n",
+      "PointCloud with 811 points.\n"
      ]
     }
    ],
    "source": [
     "#pcd = o3d.io.read_point_cloud(\"models/cube_test1.ply\")\n",
-    "pcd = o3d.io.read_point_cloud(\"C:/Open3D-master/examples/test_data/fragment.ply\") \n",
+    "#pcd = o3d.io.read_point_cloud(\"C:/Open3D-master/examples/test_data/fragment.ply\") \n",
+    "pcd = o3d.io.read_point_cloud(\"aivisum.ply\")\n",
     "\n",
     "vis = o3d.visualization.Visualizer()\n",
     "vis.create_window(width = 800, height = 600)\n",
@@ -658,13 +688,14 @@
     "print(pcd)\n",
     "models_list = []\n",
     "inliers_list = []\n",
-    "for i in range(5):\n",
-    "    model, inliers, inliers_indices = find_plane(pcd,80,0.08)\n",
+    "for i in range(8):\n",
+    "    model, inliers, inliers_indices = find_plane(pcd,100,0.4)\n",
     "    if inliers.shape[0]>15:\n",
     "        models_list.append(model)\n",
     "        inliers_list.append(inliers)\n",
     "        #print(inliers)\n",
     "        #hull = find_hull(inliers)  \n",
+    "        #vis.add_geometry(hull)\n",
     "        pts = color_pts(inliers)\n",
     "        vis.add_geometry(pts)\n",
     "        #print(np.asarray(pcd.colors))\n",
@@ -680,11 +711,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcd = o3d.io.read_point_cloud(\"C:/Open3D-master/examples/test_data/fragment.ply\") \n",
+    "#pcd = o3d.io.read_point_cloud(\"C:/Open3D-master/examples/test_data/fragment.ply\") \n",
+    "pcd = o3d.io.read_point_cloud(\"Base.ply\")\n",
     "vis1 = o3d.visualization.Visualizer()\n",
     "vis1.create_window(width = 800, height = 600)\n",
     "vis1.add_geometry(pcd)\n",
@@ -708,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
